# StmTrt

./: .gitignore  README.md  Untitled.ipynb  clean.sh  create-engine-models.py  create-onnx-models.py  crete-onnx-models.ipynb  demo-2.py  demo.py  net.py  net2.py  track.py  tracker.py  utils.py
test_trt/: Inception3_M.cpp  backbone_q.cpp  head.cpp  head1.cpp  memorize.cpp
trt/: CMakeLists.txt  calibrator.cpp  calibrator.hpp  cudaCrop.cu  cudaCrop.h  cuproc.cpp  cuproc.h  head.cpp  main.cpp  memorize.cpp  stmtracker.cpp  stmtracker.cu  stmtracker.hpp  trt_utils.cpp  utils.cpp  utils.hpp
trt-back/: calibrator.cpp  calibrator.hpp  cuproc.cpp  cuproc.h  utils.cpp
